Changelog
=========

2010/06/03
 - Import on google code
   svn checkout https://python-nmap.googlecode.com/svn/trunk/ python-nmap --username  XXXXX
 - added PortScanner.scanstats method
 - updated example.py and documentation for pingsweep
 - updated Makefile for generating documentation

2010/03/09
 - Modified packaging. v0.1.1 [norman]

2010/03/08
 - Initial release. v0.1.0 [norman]